# CxApp

./: .gitignore
BST/: bsTree.c  bsTree_demo.c  stack.h  (+1 more)
agentic_systems/: .gitignore  PLAN.md  conftest.py  pyproject.toml
agentic_systems/M01_json_rpc/: README.md
agentic_systems/M01_json_rpc/src/: server.py
agentic_systems/M01_json_rpc/tests/: test_server.py
agentic_systems/M02_multi_turn_sessions/: README.md
agentic_systems/M03_async_persistence/: README.md
agentic_systems/M04_langgraph_basics/: README.md
agentic_systems/M05_tool_design/: README.md
agentic_systems/M06_system_prompt/: README.md
agentic_systems/M07_pydantic_contracts/: README.md
agentic_systems/M08_offline_evaluation/: README.md
agentic_systems/M09_a2a_client_adapter/: README.md
agentic_systems/M10_streamlit_session_state/: README.md
agentic_systems/M11_two_phase_submit/: README.md
agentic_systems/M12_testing_patterns/: README.md
agentic_systems/M13_durable_execution/: README.md
agentic_systems/M14_custom_checkpointer/: README.md
agentic_systems/M15_graph_factory/: README.md
agentic_systems/data/: stations.json
rust_fundamentals/: Cargo.toml  PLAN.md
rust_fundamentals/M01_ownership_borrowing/: Cargo.toml
rust_fundamentals/M02_structs_enums/: Cargo.toml
rust_fundamentals/M03_collections_iterators/: Cargo.toml
rust_fundamentals/M04_error_handling/: Cargo.toml
rust_fundamentals/M05_traits_generics/: Cargo.toml
rust_fundamentals/M06_closures_functional/: Cargo.toml
rust_fundamentals/M07_type_driven_design/: Cargo.toml
rust_fundamentals/M08_module_organisation/: Cargo.toml
rust_fundamentals/M09_error_handling_patterns/: Cargo.toml
rust_fundamentals/M10_serde_dto/: Cargo.toml
rust_fundamentals/M11_trait_polymorphism/: Cargo.toml
rust_fundamentals/M12_macros_codegen/: Cargo.toml
rust_fundamentals/M13_test_patterns/: Cargo.toml
(+181 files in other folders)
